--- a/CMS1/Views/Home/Index.cshtml
+++ b/CMS1/Views/Home/Index.cshtml
@@ -13,14 +13,14 @@
 </head>
 <body>
 
-    <div id="PageContents"></div>
+    @*<div id="PageContents"></div>*@
     <br />
       
 
-    <script src="js/dynamic.js" asp-append-version="true"></script>
+    @*<script src="js/dynamic.js" asp-append-version="true"></script>
     <script src="js/index.js" asp-append-version="true"></script>
     <script>StartMe()</script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>*@
 </body>
 </html>
 
